Revert "Fix Warnings #706"
This reverts commit 01ad9a6831a13e01c19bc02dc04a76db3c94455d.